--- a/client/build.gradle
+++ b/client/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation project(':abi')
 
     implementation 'io.grpc:grpc-netty-shaded:1.31.0'
+    implementation 'io.grpc:grpc-netty:1.31.0'
+    implementation 'io.grpc:grpc-okhttp:1.31.0'
     implementation 'io.grpc:grpc-protobuf:1.31.0'
     implementation 'io.grpc:grpc-stub:1.31.0'
     compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
