--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -39,7 +39,11 @@ dependencies {
 
     // tronj core libs
     implementation 'com.github.ki5fpl.tronj:abi:0.4.0'
-    implementation 'com.github.ki5fpl.tronj:client:0.4.0'
+    // implementation 'com.github.ki5fpl.tronj:client:0.4.0'
+    implementation 'io.grpc:grpc-netty-shaded:1.31.0'
+    implementation 'io.grpc:grpc-netty:1.31.0'
+    implementation 'io.grpc:grpc-protobuf:1.31.0'
+    implementation fileTree(dir:'../client')
 }
 
 application {
