add method: freezeBalance(),unFreezeBalance(),getBlockByNum(),getNowBlock(),getNodeInfo(),listNodes(),getTransactionInfoByBlockNum(),getTransactionInfoById(),getAccount(),listWitnesses(),voteWitness()

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ subprojects {
 
     dependencies {
         testImplementation "org.junit.jupiter:junit-jupiter:$junitJupiterVersion"
+        compile "com.madgag.spongycastle:core:1.58.0.0"
     }
 
     test {
