--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -35,11 +35,17 @@ dependencies {
 
     // protobuf & grpc
     implementation 'com.google.protobuf:protobuf-java:3.11.0'
+    implementation 'io.grpc:grpc-netty:1.31.0'
+    implementation 'io.grpc:grpc-netty-shaded:1.31.0'
+    implementation 'io.grpc:grpc-protobuf:1.31.0'
     implementation 'io.grpc:grpc-stub:1.31.0'
+    implementation 'io.grpc:grpc-stub:1.31.0'
+    implementation 'com.madgag.spongycastle:core:1.58.0.0'
 
     // tronj core libs
     implementation 'com.github.ki5fpl.tronj:abi:0.4.0'
-    implementation 'com.github.ki5fpl.tronj:client:0.4.0'
+    // implementation 'com.github.ki5fpl.tronj:client:0.4.0'
+    implementation fileTree(dir: '../client')
 }
 
 application {
