--- a/abi/build.gradle
+++ b/abi/build.gradle
@@ -13,7 +13,7 @@ publishing {
     publications {
         MyPublication(MavenPublication) {
             from components.java
-            groupId 'com.github.ki5fpl.tronj'
+            groupId 'org.tron.tronj'
             artifactId 'abi'
             version '0.0.1'
         }
