--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -19,7 +19,7 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
     maven {
-        url  'https://dl.bintray.com/ki5fpl/tronj'
+        url  'https://dl.bintray.com/starsakary/tronj'
     }
 }
 
@@ -42,12 +42,14 @@ dependencies {
     implementation 'io.grpc:grpc-stub:1.31.0'
 
     // tronj core libs
-    implementation 'com.github.ki5fpl.tronj:abi:0.4.0'
+    implementation 'org.tron.tronj:abi:0.4.0'
+    implementation 'org.tron.tronj:client:0.4.0'
+    implementation 'org.tron.tronj:utils:0.4.0'
     // implementation 'com.github.ki5fpl.tronj:client:0.4.0'
     implementation 'io.grpc:grpc-netty-shaded:1.31.0'
     implementation 'io.grpc:grpc-netty:1.31.0'
     implementation 'io.grpc:grpc-protobuf:1.31.0'
-    implementation fileTree(dir:'../client')
+    // implementation fileTree(dir:'../client')
 }
 
 application {
