--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -42,14 +42,14 @@ dependencies {
     implementation 'io.grpc:grpc-stub:1.31.0'
 
     // tronj core libs
-    implementation 'org.tron.tronj:abi:0.4.0'
-    implementation 'org.tron.tronj:client:0.4.0'
-    implementation 'org.tron.tronj:utils:0.4.0'
-    // implementation 'com.github.ki5fpl.tronj:client:0.4.0'
+    implementation 'org.tron.tronj:abi:0.1.0'
+    // implementation 'org.tron.tronj:client:0.1.0'
+    implementation 'org.tron.tronj:utils:0.1.0'
+    // implementation 'com.github.ki5fpl.tronj:client:0.1.0'
     implementation 'io.grpc:grpc-netty-shaded:1.31.0'
     implementation 'io.grpc:grpc-netty:1.31.0'
     implementation 'io.grpc:grpc-protobuf:1.31.0'
-    // implementation fileTree(dir:'../client')
+    implementation fileTree(dir:'../client')
 }
 
 application {
